--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
@@ -17,56 +17,70 @@
         <div class="col-md-12">
             <div class="card" *ngIf="contact" [class.viewed]="contact.viewed">
                 <div class="card-body">
-                <div class="row">
-                <div class="col-sm-12">
-                    <div class="btn-group float-right mb-5"
-                         role="group"
-                         aria-label="Basic example">
-                        <a class="btn btn-default btn-sm text-dark"
-                           [routerLink]="['/admin/contacts']">
-                            <i class="fa fa-undo"></i>&nbsp;Cancel
-                        </a>
-                        <a class="btn btn-warning btn-sm text-dark"
-                           *ngIf="!contact.viewed"
-                           (click)="onMarkViewed(contact.$key)">
-                            <i class="fal fa-glasses"></i> Viewed
-                        </a>
-                        <a class="btn btn-outline-warning btn-sm text-dark"
-                           *ngIf="contact.viewed"
-                           (click)="onUnmarkViewed(contact.$key)">
-                            <i class="fal fa-times"></i> Viewed
-                        </a>
-                        <a class="btn btn-danger btn-sm text-white"
-                           (click)="onDeleteContact(contact.$key)">
-                            <i class="fa fa-trash-alt"></i> Delete
-                        </a>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="btn-group float-right mb-5"
+                                 role="group"
+                                 aria-label="Basic example">
+                                <a class="btn btn-default btn-sm text-dark"
+                                   [routerLink]="['/admin/contacts']">
+                                    <i class="fa fa-undo"></i>&nbsp;Cancel
+                                </a>
+                                <a class="btn btn-warning btn-sm text-dark"
+                                   *ngIf="!contact.viewed"
+                                   (click)="onMarkViewed(contact.$key)">
+                                    <i class="fa fa-glasses"></i> Viewed
+                                </a>
+                                <a class="btn btn-outline-warning btn-sm text-dark"
+                                   *ngIf="contact.viewed"
+                                   (click)="onUnmarkViewed(contact.$key)">
+                                    <i class="fa fa-times"></i> Viewed
+                                </a>
+                                <a class="btn btn-danger btn-sm text-white"
+                                   (click)="onDeleteContact(contact.$key)">
+                                    <i class="fa fa-trash-alt"></i> Delete
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                </div>
 
                     <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <h3 class="alert alert-warning mt-2" *ngIf="contact.viewed">
-                          <i class="fa fa-check-square"></i>&nbsp;Viewed
-                        </h3>
-                    </div>
+                        <div class="col-sm-12 text-center">
+                            <h3 class="alert alert-warning" *ngIf="contact.viewed">
+                                <i class="fa fa-check-square"></i>&nbsp;Viewed
+                            </h3>
+                        </div>
                     </div>
 
                     <div class="row">
                         <div class="col-sm-12">
-                            <table class="table table-striped mt-4">
+                            <table class="table table-striped mt-2">
                                 <tbody>
                                 <tr>
                                     <th scope="col">From:</th>
-                                    <td class="text-dark">{{ contact.firstName }} {{ contact.lastName }}</td>
+                                    <td class="text-dark">
+                                        <i class="fa fa-user-alt"></i>&nbsp;
+                                        {{ contact.firstName }} {{ contact.lastName }}
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <th scope="col">Program:</th>
-                                    <td class="text-dark">{{ contact.programType }}</td>
+                                    <th scope="col">ID:</th>
+                                    <td class="text-dark">
+                                        <i class="fa fa-ticket-alt"></i>&nbsp;<span class="text-mono">
+                                        {{ contact.$key }}
+                                        </span>
+                                    </td>
                                 </tr>
+                                <!--<tr>-->
+                                    <!--<th scope="col">Program:</th>-->
+                                    <!--<td class="text-dark">-->
+                                       <!--<i class="fa fa-code-branch"></i>&nbsp; {{ contact.programType }}-->
+                                    <!--</td>-->
+                                <!--</tr>-->
                                 <tr>
                                     <th scope="col">Send Date:</th>
-                                    <td class="text-dark"><i class="fa fa-clock"></i> {{ contact.sentDate | date:'medium' }}
+                                    <td class="text-dark"><i class="fa fa-clock"></i>&nbsp; {{ contact.sentDate |
+                                        date:'medium' }}
                                     </td>
                                 </tr>
                                 <tr>
@@ -74,7 +88,7 @@
                                     <td>
                                         <a href="tel:{{ contact.phoneNumber }}"
                                            class="text-decoration-none text-dark">
-                                            <i class="fa fa-phone"></i> {{ contact.phoneNumber }}
+                                            <i class="fa fa-phone"></i>&nbsp; {{ contact.phoneNumber }}
                                         </a>
                                     </td>
                                 </tr>
@@ -83,7 +97,7 @@
                                     <td>
                                         <a href="mailto:{{ contact.email }}?subject=DDW® Contact"
                                            class="text-decoration-none text-dark">
-                                            <i class="fa fa-envelope"></i> {{ contact.email }}
+                                            <i class="fa fa-envelope"></i>&nbsp; {{ contact.email }}
                                         </a>
                                     </td>
                                 </tr>
@@ -95,7 +109,7 @@
                     <div class="card bg-lighter">
                         <div class="card-body">
                             <h6 class="card-title">
-                                Subject:
+                                <i class="fa fa-code-branch"></i>&nbsp; Subject:
                             </h6>
                             <p class="card-text p-3">
                                 {{ contact.subject }}
@@ -107,7 +121,7 @@
                     <div class="card mt-3 bg-lighter">
                         <div class="card-body">
                             <h6 class="card-title">
-                                Body:
+                              <i class="fa fa-align-left"></i>&nbsp; Body:
                             </h6>
                             <p class="card-text p-3">
                                 {{ contact.body }}
