--- a/src/app/components/core/contact-us/contact-us.component.html
+++ b/src/app/components/core/contact-us/contact-us.component.html
@@ -45,14 +45,14 @@
                               (ngSubmit)="onNewContact(newContactForm.value)">
 
                             <div class="form-group">
-                                <label for="programType">Program</label>
+                                <label for="subject">Subject</label>
                                 <select class="custom-select custom-select-lg mb-3"
-                                        id="programType"
-                                        formControlName="programType">
-                                    <option selected>Select A Program</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
+                                        id="subject"
+                                        formControlName="subject">
+                                    <option selected>Select A Subject</option>
+                                    <option value="Test Subject One">Test Subject One</option>
+                                    <option value="Test Subject Two">Test Subject Two</option>
+                                    <option value="Test Subject Three">Test Subject Three</option>
                                 </select>
                             </div>
 
@@ -85,12 +85,12 @@
                                        formControlName="phoneNumber">
                             </div>
 
-                            <div class="form-group">
-                                <label>Subject</label>
-                                <input type="text"
-                                       class="form-control"
-                                       formControlName="subject">
-                            </div>
+                            <!--<div class="form-group">-->
+                            <!--<label>Subject</label>-->
+                            <!--<input type="text"-->
+                            <!--class="form-control"-->
+                            <!--formControlName="subject">-->
+                            <!--</div>-->
 
                             <div class="form-group">
                                 <label>Body</label>
