Cleared out minor bug fixes

--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -69,7 +69,7 @@
                             <i class="fa fa-phone"></i> {{ contact.phoneNumber }}
                         </td>
                         <td scope="col">
-                            {{ contact.subject }}
+                            <i class="fa fa-code-branch"></i>&nbsp;{{ contact.subject }}
                         </td>
                         <td scope="col" class="text-truncate">
                             {{ contact.sentDate | date:'medium' }}
