--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -10,7 +10,7 @@
             to know at
             the event. It is now available to download.</p>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <a class="app apple" href="http://ativ.me/ev7"></a>
             </div>
             <div class="col-sm-6">
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-    <div class="col-auto right-panel">
+    <div class="col-md-3 right-panel">
         <p><img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-white.png"
                 alt="DDW logo"
                 class="img-fluid ddw-white"></p>
@@ -160,7 +160,7 @@
 <div class="row middle-bottom">
     <div class="container text-center">
         <div class="offset-md-2 col-md-8">
-            <h5>Sponsoring Societies: AASLD | AGA | ASGE | SSAT</h5>
+            <h5>Sponsoring Societies: <a href="http://www.aasld.org/">AASLD</a> | <a href="http://www.gastro.org/">AGA</a> | <a href="http://www.asge.org/">ASGE</a> | <a href="http://ssat.com/">SSAT</a></h5>
         </div>
     </div>
 </div>
