--- a/src/app/components/core/contact-us/contact-us.component.css
+++ b/src/app/components/core/contact-us/contact-us.component.css
@@ -3,7 +3,7 @@ img.bannerPhotoURL {
     left: 0;
     position: relative;
     max-height: 350px;
-    width: 100%;
+    /*width: 100%;*/
     /*z-index: 0;*/
 }
 
