--- a/src/app/components/core/navbar/navbar.component.css
+++ b/src/app/components/core/navbar/navbar.component.css
@@ -171,7 +171,7 @@ ul.level1 li a {
 
 #header .networking {
     float: right;
-    padding-top: 2px;
+    padding-top: 10px;
 }
 
 .auxnav {
@@ -275,9 +275,9 @@ button.text-secondary {
         /*border-bottom-left-radius: .25em;
         border-bottom-right-radius: .25em;*/
     }
-    li.dropdown.show > a {
-        background: #FFFFFF;
-    }
+    /*li.dropdown.show > a {*/
+        /*background: #FFFFFF;*/
+    /*}*/
     .dropdown-item {
         white-space: normal;
     }
