--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ h1.admin-badge, h1.admin-badge > i.fa {
 
 p > a:link, li > a:link {
     color: #2e6da4;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .image-uploader * {
@@ -248,11 +248,11 @@ a.btn.btn-warning.btn-lg {
 
 a.btn.btn-warning.btn-lg:hover {
     background-color: #FEB512;
-    color: #fff;
+    color: #004060;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
-    font-weight: bold;
+    font-weight: normal;
     text-decoration: none;
     padding: 0.5em 2em;
     font-size: 18px;
@@ -343,9 +343,6 @@ h5.card-title[_ngcontent-c3] {
     margin-bottom: 1em;
 }
 
-.quoteby {
-    padding-left: 2em;
-}
 
 .bg-blue-inner {
     background-color: #003F5F;
@@ -624,9 +621,6 @@ a.app.apple:hover {
     background-image: url('https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/apple-hover.png');
 }
 
-.row.top-footer {
-    margin-top: 50px;
-}
 
 .row-blocks img {
     width: 100%;
@@ -676,7 +670,7 @@ h2.card-sec-title::after {
 }
 
 .block h3, .block p {
-    text-align: left;
+    text-align: center;
     padding: 0;
 }
 
@@ -691,5 +685,80 @@ h2.card-sec-title::after {
         padding-right: 3em;
         padding-top: 1em;
     }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.cse .gsc-control-cse, .gsc-control-cse {
+    font-family: Arial, sans-serif;
+    background-color: transparent !important;
+    border: none !important;
+}
+
+.gsc-input-box {
+    border: 1px solid #ffffff;
+    background: none;
+}
+
+.cse .gsc-search-button-v2, .gsc-search-button-v2, .cse .gsc-search-button-v2:hover, .gsc-search-button-v2:hover {
+    font-size: 0px;
+    padding: 6px 27px;
+    width: auto;
+    vertical-align: middle;
+    border: 1px solid #fff;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    margin-top: 2px;
+    border-color: #fff;
+    background-color: transparent;
+    background-image: none;
+}
+
+
+.cse .gsc-search-button-v2:hover, .gsc-search-button-v2:hover {
+    cursor: pointer;
+}
+
+
+.btn.cta:hover {
+    background-color: #FEBD00;
+    color: #004060;
+}
+
+.block.cta {
+    color: #000000;
+}
+
+
+.dropdown-item:not(.disabled).active, .dropdown-item:not(.disabled):active {
+    /*background-color: #C4C7C8;*/
+    background-color: #f8f9fa;
+    color: #fff;
+}
+
+.middle-bottom h5 a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.gsc-input-box {
+    border: 1px solid #FFF;
+    background: #fff;
+    border-radius: 2px;
+}
+
+.gsc-search-button-v2 {
 
 }
