Added meta descriptions for pages and press releases, and fixed bug where press release was not marked as published on edit if it was

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
@@ -94,7 +94,6 @@ h2.card-sec-title {
     margin: 5em 0 8em 0;
 }
 
-
 .card-body {
     line-height: 2em;
 }
@@ -119,5 +118,14 @@ a.btn.btn-warning.btn-lg:hover {
     -moz-border-radius: 0;
     border-radius: 0;
     font-weight: bold;
+}
+
+input,
+textarea,
+select.form-control,
+option,
+pre.alert.slug,
+.card.bg-lighter {
+    border-radius: 0;
 }
 
