--- a/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
@@ -33,6 +33,18 @@
                     </div>
 
                     <div class="form-group">
+                        <label>Meta Descripton <br>
+                            <small>If blank meta will use site default (Not recommended)</small>
+                        </label>
+                        <textarea type="text"
+                                  class="form-control"
+                                  placeholder="Should be a sentence or two that accurately describes this page"
+                                  formControlName="metaDesc"
+                                  rows="3">
+                        </textarea>
+                    </div>
+
+                    <div class="form-group">
                         <label>Summary</label>
                         <textarea type="text"
                                   rows="5"
