--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -34,7 +34,18 @@
                            *ngIf="titleNotValid">
                             There is already a page with this title. Please edit that page or rename this page.
                         </p>
+                    </div>
 
+                    <div class="form-group">
+                        <label>Meta Descripton <br>
+                            <small>If blank meta will use site default (Not recommended)</small>
+                        </label>
+                        <textarea type="text"
+                                  class="form-control"
+                                  placeholder="Should be a sentence or two that accurately describes this page"
+                                  formControlName="metaDesc"
+                                  rows="3">
+                        </textarea>
                     </div>
 
 
