Update search styles and fix banner photo.

--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -174,8 +174,8 @@
         </div>
         <div class="col text-right pr-5">
             <p class="copy">
-                Site Built by <a href="https://gastro.org" target="_blank" class="aga-copy">&copy; 2018 American
-                Gastroenterological Association</a>.&nbsp;
+                <!--Site Built by <a href="https://gastro.org" target="_blank" class="aga-copy">&copy; 2018 American-->
+                <!--Gastroenterological Association</a>.&nbsp;-->
                 <a href="https://www.facebook.com/DDWMeeting" target="_blank" class="social"><i
                         class="fab fa-facebook"></i></a>
                 <a href="https://twitter.com/DDWMeeting" target="_blank" class="social"><i
