--- a/src/app/components/core/navbar/navbar.component.css
+++ b/src/app/components/core/navbar/navbar.component.css
@@ -351,5 +351,6 @@ button.text-secondary {
 
 .navbar.bg-light .navbar-nav .show>.nav-link {
     color: #4E5155 !important;
+    background-color: #FFFFFF;
 }
 
