--- a/src/styles.css
+++ b/src/styles.css
@@ -754,11 +754,23 @@ h2.card-sec-title::after {
 }
 
 .gsc-input-box {
-    border: 1px solid #FFF;
-    background: #fff;
-    border-radius: 2px;
+    border: 1px solid #FFFFFF !important;
+    background: none !important;
+    border-radius: 2px !important;
 }
 
 .gsc-search-button-v2 {
+    font-size: 0px;
+    padding: 6px 27px;
+    width: auto;
+    vertical-align: middle;
+    border: 1px solid #FFFFFF !important;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    margin-top: 2px;
+    border-color: #ffffff;
+    background-color: transparent !important;
+    background-image: none !important;
 
 }
